[package]
name = "inzidenz"
version = "0.1.0"
authors = ["Vincent Woltmann <vincent.woltmann@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = { version = "1.0.59" }
once_cell = "1.4.1"
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"] }
tokio = { version = "1.16.1", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
